--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,12 @@
+*.epf binary
+
+*.scr text
+
+*.lbr text
+
+*.sch text
+*.brd text
+
 *.epf linguist-language=Eagle
 *.scr linguist-language=Eagle
 *.lbr linguist-language=Eagle
